fix dimensions on card match & SVG flickering

--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,44 @@
-body{
-  background-color: black;
-  color: aliceblue;
+body {
+	color: aliceblue;
+	background-color: rgb(5, 142, 227);
 }
-.card-item{
-  height: 256px;
-  background-color: rgb(193, 190, 190);
-  margin: 10px;
-  border-radius: 6px;
-  box-shadow: 2px 0px 3px 0px #4d4c4c;
-  padding: 15px;
+.header {
+	background-color: black;
+	padding: 10px;
 }
-.card-item-active{
-  padding: 15px;
-  height: 256px;
-  background-color: rgb(191, 204, 238);
-  margin: 10px;
-  border-radius: 6px;
-  box-shadow: 2px 0px 3px 0px #4d4c4c;
-  transform: rotateY(360deg);
-  transition: transform 0.8s;
+.card-item {
+	height: 156px;
+	background-color: rgb(193, 190, 190);
+	margin: 10px;
+	border-radius: 6px;
+	box-shadow: 2px 0px 3px 0px #4d4c4c;
+	padding: 15px;
 }
-.card-item-match{
-  height: 256px;
-  margin: 10px;
-  background-color: rgba(193, 190, 190, 0.522);
-  border-radius: 6px;
+.card-item-active {
+	height: 256px;
+	padding: 15px;
+	background-color: rgb(191, 204, 238);
+	margin: 10px;
+	border-radius: 6px;
+	box-shadow: 2px 0px 3px 0px #4d4c4c;
+	transform: rotateY(360deg);
+	transition: transform 0.8s;
+}
+.card-item-match {
+	height: 156px;
+	margin: 10px;
+	background-color: rgba(193, 190, 190, 0.522);
+	border-radius: 6px;
 }
 
-.card-wrapper{
-  background-color: rgb(5, 142, 227);
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
+.card-item img {
+	height: 156px;
+}
+
+.card-wrapper {
+	background-color: rgb(5, 142, 227);
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
 }
